fixed flower bg overflowing modules

--- a/assets/scss/modules/accordion.scss
+++ b/assets/scss/modules/accordion.scss
@@ -10,6 +10,7 @@
     background-color: getColor(primary, mid-dark);
     padding-top: 75px;
     padding-bottom: 100px;
+    overflow: hidden;
 
     .flower-img-one {
         position: absolute;
